tests/snapshots/examples_fixtures/type_system__failing__106_let_annotation_int_string.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/106_let_annotation_int_string.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `x` does not match its type annotation.

  examples/type_system/failing/106_let_annotation_int_string.flx:2:18
  |
2 |     let x: Int = "hello"
  |                  ^^^^^^^
  |                  ------- this value has type `String`

  |            --- but `x` was annotated as `Int`

Note:
  annotated type: Int
  value type: String

Help:
  Change `x` to a `Int` value or update the annotation.
== stdout ==
<not executed>
